--- a/BNC.html
+++ b/BNC.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Déficits des activités commerciales non professionnelles</title>
+    <title>Déficits des activités non commerciales non professionnelles</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,6 +18,7 @@
             padding: 20px;
             background: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center; /* Added to center the button */
         }
         h1 {
             text-align: center;
@@ -27,22 +28,32 @@
             text-align: justify;
             margin: 10px 0;
         }
+        .button-container {
+            margin-top: 20px;
+        }
+        .home-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .home-button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Déficits des activités non commerciales non professionnelles (BNC) </h1>
-
+        <h1>Déficits des activités non commerciales non professionnelles (BNC)</h1>
         <p>
-        Les déficits des activités non commerciales à caractère non professionnel peuvent être imputés uniquement sur des bénéfices de 
-même nature de la même année et des six années suivantes. 
-Cependant, pour les brevets pris avant le 1.1.2020, lorsqu’un inventeur expose des frais pour prendre ce brevet ou en assurer la 
-maintenance, sans percevoir de produits imposables, ou lorsqu’il 
-perçoit des produits inférieurs à ces frais, le déficit correspondant 
-doit faire l’objet d’une 2035 et être reporté sur la 2042 C PRO , 
-rubrique “Revenus non commerciaux professionnels”. Ce déficit est déductible du revenu global de l’année de la 
-prise du brevet et des neuf années suivantes.
+            Les déficits des activités non commerciales à caractère non professionnel peuvent être imputés uniquement sur des bénéfices de même nature de la même année et des six années suivantes. Cependant, pour les brevets pris avant le 1.1.2020, lorsqu’un inventeur expose des frais pour prendre ce brevet ou en assurer la maintenance, sans percevoir de produits imposables, ou lorsqu’il perçoit des produits inférieurs à ces frais, le déficit correspondant doit faire l’objet d’une 2035 et être reporté sur la 2042 C PRO, rubrique “Revenus non commerciaux professionnels”. Ce déficit est déductible du revenu global de l’année de la prise du brevet et des neuf années suivantes.
         </p>
+        <div class="button-container">
+            <a href="index.html" class="home-button">Accueil</a>
+        </div>
     </div>
 </body>
 </html>
