--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
         h1 {
             color: #333;
         }
+        h2, h3 {
+            color: #555;
+        }
+        .team {
+            margin-bottom: 20px;
+        }
+        .team img {
+            width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+        }
         a {
             display: inline-block;
             margin: 10px;
@@ -40,11 +51,18 @@
 </head>
 <body>
     <div class="container">
-        <h1>Accès aux Pages</h1>
+        <div class="team">
+            <h2>Une production originale et dans son temps</h2>
+            <p>Baptiste Dutoit, Gaetan Vandamme, Christian Nicolas, Elie Gouinguenet, Alexandre Roy</p>
+            <h3>Vous présentent</h3>
+            <h2>Traitement des déficits catégoriels</h2>
+            <img src="canva.png" alt="Image Canva">
+        </div>
+        <h1>Accès aux détails des catégories</h1>
         <a href="RF.html">RF</a>
         <a href="RCM.html">RCM</a>
-        <a href="BIC1.html">BIC1</a>
-        <a href="BIC2.html">BIC2</a>
+        <a href="BIC1.html">BIC</a>
+        <a href="BIC2.html">BIC logements meublés</a>
         <a href="BA.html">BA</a>
         <a href="BNC.html">BNC</a>
     </div>
