--- a/BIC1.html
+++ b/BIC1.html
@@ -18,6 +18,7 @@
             padding: 20px;
             background: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center; /* Added to center the button */
         }
         h1 {
             text-align: center;
@@ -26,6 +27,21 @@
         p {
             text-align: justify;
             margin: 10px 0;
+        }
+        .button-container {
+            margin-top: 20px;
+        }
+        .home-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .home-button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -40,6 +56,9 @@
             commerciales non professionnelles, l’année de leur réalisation et 
             les six années suivantes.
         </p>
+        <div class="button-container">
+            <a href="index.html" class="home-button">Accueil</a>
+        </div>
     </div>
 </body>
 </html>
