--- a/RF.html
+++ b/RF.html
@@ -18,6 +18,7 @@
             padding: 20px;
             background: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center; /* Centrer le contenu */
         }
         h1 {
             text-align: center;
@@ -30,9 +31,25 @@
         ul {
             margin: 10px 0;
             padding-left: 20px;
+            text-align: left; /* Aligner les listes à gauche */
         }
         ul li {
             margin: 5px 0;
+        }
+        .button-container {
+            margin-top: 20px;
+        }
+        .home-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .home-button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -55,6 +72,9 @@
         <p>
             La partie du déficit qui excède 10 700€ (ou 15 300€) limite éventuellement rehaussée du montant des dépenses de travaux de rénovations énergétiques, mais sans pouvoir excéder 21 400 € ou qui résulte d’intérêts d’emprunts est imputable sur les revenus fonciers des dix années suivantes.
         </p>
+        <div class="button-container">
+            <a href="index.html" class="home-button">Accueil</a>
+        </div>
     </div>
 </body>
 </html>
