--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2>Une production originale et dans son temps</h2>
             <p>Baptiste Dutoit, Gaetan Vandamme, Christian Nicolas, Elie Gouinguenet, Alexandre Roy</p>
             <h3>Vous présentent</h3>
-            <h2>Traitement des déficits catégoriels</h2>
+            <h2>Traitement des déficits catégoriels 2024</h2>
             <img src="canva.png" alt="Image Canva">
         </div>
         <h1>Accès aux détails des catégories</h1>
