--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             height: auto;
             margin-bottom: 20px;
         }
+        .qr-image {
+            width: 20%; /* Ajustez le pourcentage en fonction de vos besoins */
+            height: auto;
+            margin-bottom: 20px;
+        }
         a {
             display: inline-block;
             margin: 10px;
@@ -57,6 +62,7 @@
             <h3>Vous présentent</h3>
             <h2>Traitement des déficits catégoriels 2024</h2>
             <img src="canva.png" alt="Image Canva">
+            <img src="qr.png" alt="Image QR Code" style="width: 20%; height: auto;">
         </div>
         <h1>Accès aux détails des catégories</h1>
         <a href="RF.html">RF</a>
