--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <h3>Vous présentent</h3>
             <h2>Traitement des déficits catégoriels 2024</h2>
             <img src="canva.png" alt="Image Canva">
+		<p>Remarque: En cas de multiples déficits, ce sont les déficits d'activité qui sont imputables en priorité par rapport aux déficits de patrimoine.</p>
             <img src="qr.png" alt="Image QR Code" style="width: 20%; height: auto;">
         </div>
         <h1>Accès aux détails des catégories</h1>
