--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
         <h1>Accès aux détails des catégories</h1>
         <a href="RF.html">RF</a>
         <a href="RCM.html">RCM</a>
-        <a href="BIC1.html">BIC</a>
-        <a href="BIC2.html">BIC logements meublés</a>
+        <a href="BIC1.html">BIC NP</a>
+        <a href="BIC2.html">BIC NP logements meublés</a>
         <a href="BA.html">BA</a>
         <a href="BNC.html">BNC</a>
+	<a href="BIC3.html">BIC pro et BNC pro</a>
     </div>
 </body>
 </html>
