--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
             <img src="qr.png" alt="Image QR Code" style="width: 20%; height: auto;">
         </div>
         <h1>Accès aux détails des catégories</h1>
+	<a href="BIC3.html">Déficit global (BIC pro et BNC pro)</a>
         <a href="RF.html">RF</a>
         <a href="RCM.html">RCM</a>
         <a href="BIC1.html">BIC NP</a>
         <a href="BIC2.html">BIC NP logements meublés</a>
         <a href="BA.html">BA</a>
         <a href="BNC.html">BNC</a>
-	<a href="BIC3.html">BIC pro et BNC pro</a>
+	
     </div>
 </body>
 </html>
