--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 	<a href="BIC3.html">Déficit global (BIC pro et BNC pro)</a>
         <a href="RF.html">RF</a>
         <a href="RCM.html">RCM</a>
-        <a href="BIC1.html">BIC NP</a>
+        <a href="BIC1.html">BIC NP hors logements meublés</a>
         <a href="BIC2.html">BIC NP logements meublés</a>
         <a href="BA.html">BA</a>
-        <a href="BNC.html">BNC</a>
+        <a href="BNC.html">BNC NP</a>
 	
     </div>
 </body>
